<resources>
    <string name="app_name">定位求助短信</string>
    <string name="baidu">百度</string>
    <string name="amap">高德</string>
    <string name="tencent">腾讯</string>
    <string name="callHelp">救命!</string>
    <!--<string name="location_Amap_Url">androidamap://viewMap?lat=%2$f&amp;lon=%1$f</string>-->
    <string name="location_Amap_Url">我现在在：https://uri.amap.com/marker?position=%1$f,%2$f</string>
    <!--<string name="location_baidu_Url">baidumap://map/latlng:%2$f,%1$f</string>-->
    <string name="location_baidu_Url">我现在在：https://api.map.baidu.com/geocoder?location=%2$f,%1$f&amp;coord_type=gcj02&amp;output=html&amp;src=com.jackhang.locationsms</string>
    <string name="location_tencent_Url">我现在在：https://apis.map.qq.com/uri/v2/geocoder?coord=%2$f,%1$f&amp;referer=LocationSMS</string>
    <string name="location_msg_end">- 定位求助短信</string>

    <string name="privacyPolicy">读取短信：位置短信需要阅读短信权限才能查看短信是否包含任何请求位置的单词，例如“你在哪里？”。接收文本消息的发送者和时间将存储在设备本地，因此可以在应用程序中记录位置请求，但不会收集有关已接收文本的信息。
        \n位置访问:当设备的GPS位置将被请求时手机会收到一条短信，其中包含请求某个位置的任何字词，例如“你在哪里？”。如果此文本消息的发件人有权请求您的位置，那么刚刚请求的位置将被回复给他们。纬度和经度将本地存储在设备上，因此可以在应用程序中记录位置请求，但不会收集有关该位置的信息。在频繁的背景中请求设备的位置，以查看它们是否输入任何“地理围栏”但未存储已收集的位置。
        \n读取联系人:位置SMS不收集或共享有关设备上的联系人的信息。需要读取联系人权限以允许用户选择他们希望能够访问其位置的联系人。有关他们选择的联系人的信息将仅存储在设备本地，不会被收集。
        位置SMS不会将任何数据发送到服务器</string>
    <string name="permissionDenyTitle">请求权限</string>

    <string name="permissionLocationMessage">定位请求权限</string>
    <string name="reasonPermissionLocation">获取手机GPS位置，用于求助或紧急联系人请求当前位置信息时，将当前位置信息通过短信发送。</string>

    <string name="permissionSMSMessage">请求短信权限</string>
    <string name="reasonPermissionSMS">读取/发送短信，需要该权限查看短信是否包含请求位置的词语，同时将位置信息通过短信发送。当前应用不收集任何用户信息。</string>

    <string name="permissionContacts">请求联系人权限</string>
    <string name="reasonPermissionContacts">读取联系人权限，需要用户选择希望能够访问其位置的紧急联系人。有关选择的联系人的信息将仅存储在设备本地，不会被收集。</string>

    <string name="contactsChoseTitle">选择联系人</string>
    <string name="buttonPositive">确定</string>
    <string name="buttonNegative">取消</string>

    <string name="locationLonLat">当前所在经纬度：%1$f,%2$f</string>
    <string name="locationAddress">当前所在地址：%1$s</string>

    <string name="noContactsHint">未设置紧急联系人，请先设置紧急联系人</string>
    <string name="messageSendHint">短信已发送</string>
    <string name="messageSendSuccess">求助短信发送成功</string>
    <string name="send_location_message_to_friend">Send Location Message To Friend</string>

    <string name="menuAbout">关于</string>
    <string name="openSource">代码开源</string>
    <string name="openSourceHint">项目代码开源于GayHub</string>
    <string name="authTitle">授权码</string>
    <string name="authTitleHint">使用“你在哪里？”+授权码，可以从任何设备获取您当前的位置</string>
    <string name="selectContacts">紧急联系人</string>
    <string name="selectContactsHint">选择需要求助时可以直接发送信息的紧急联系人，同时可使用“你在哪里？”查询到你所在位置，无需授权码</string>
    <string name="privacy">隐私</string>
</resources>
