<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_location_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationLonLat"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationAddress"
            android:padding="10dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/button_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="50dp"
        android:layout_below="@id/ll_location_info"
        android:contentDescription="@string/send_location_message_to_friend" />

</RelativeLayout>